2008-01-22  Ivan N. Zlatev  <contact@i-nz.net>

	 * PropertyGridView.cs: Fix focusing behavior:
	 - Tab should focus the grid text box.
	 - Clicking on the labels shouldn't focus the grid text box.

2008-01-22  Ivan N. Zlatev  <contact@i-nz.net>

	 * PropertyGridView.cs: IsValueTypeGridItem should return true 
	 for Arrays as well.

2008-01-22  Ivan N. Zlatev  <contact@i-nz.net>

	 * PropertyGrid.cs, GridEntry.cs, PropertyGridView.cs:
	  - Renamed GridEntry.SelectedObjects to TargetObjects to better
	  reflect the property name role.
	  - PropertyGrid.GetTarget is not required as the target is known
	  (TargetObjects).
	  - Setting values will handle value types as a special case now and
	  populate them up in the chain.
	  [Fixes #354990]

2008-01-21  Jonathan Pobst  <monkey@jpobst.com>

	* Hwnd.cs: Create a public property for the Graphics we keep around.

2008-01-21  Ivan N. Zlatev  <contact@i-nz.net>

	 * PropertyGridView.cs: Just hide the grid textbox and do nothing more 
	 when the current object selection changes. 
	 Fixes failing test SelectedObject_Null2.B5.

2008-01-21  Ivan N. Zlatev  <contact@i-nz.net>

	 * PropertyGrid.cs: Process Browsable properties with 
	 DesignerSerializationVisibilityAttribute.Content as being expandable.
	 This seems also what MS does. Without this e.g SplitContainer.Panel1/2
	 will not be expandable. We should be nested components-friendly now.

2008-01-21  Andreia Gaita <avidigal@novell.com>

	* WebBrowserBase.cs: Check if control was loaded properly, 
	don't bind if it wasn't.

	* HtmlDocument.cs: Implement CreateElement, Equals, Focus, 
	GetElementFromPoint, equality operators, OpenNew, Write.
	Remove extra set_Body

2008-01-18  Jonathan Pobst  <monkey@jpobst.com>

	* ContainerControl.cs, Control.cs: Apply patch from James Purcell
	that makes our AutoScale* stuff more tolerant to different orders
	of being set.  [Fixes bug #354669]

2008-01-18  Ivan N. Zlatev  <contact@i-nz.net>
