@@ -1,3 +1,7 @@
+2008-01-22  Jonathan Pobst  <monkey@jpobst.com>
+
+	* ControlTest.cs: Add test for bug #355074.
+
 2008-01-18  Jonathan Pobst  <monkey@jpobst.com>
 
 	* FormTest.cs: Add test from James Purcell for bug #354669.
